--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,7 +6,8 @@ description: Demonstrates how to use the thermal plugin.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.4.0 <4.0.0"
+  flutter: ">=3.24.5"
 
 dependencies:
   flutter:
@@ -25,7 +26,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  flutter_lints: ^1.0.4
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
 
